fix matrix-info spacing in liveGrid

--- a/web/assets/css/bs5.liveGrid.css
+++ b/web/assets/css/bs5.liveGrid.css
@@ -189,8 +189,14 @@ img.circle-img,div.circle-img{border-radius:50%;height:50px;width:50px}
 .stream-objects .stream-detected-object{position:absolute;top:0;left:0;border:3px dotted red;background:transparent;border-radius:5px}
 .stream-objects .stream-detected-point{position:absolute;top:0;left:0;border:3px solid yellow;background:transparent;border-radius:5px}
 .stream-objects .point{position:absolute;top:0;left:0;border:3px solid red;border-radius:50%}
-.stream-objects .matrix-info{
-    margin-top: 4rem; background:rgba(0,0,0,0.3);color:#fff; width: 100%; padding: 1rem; font-family:monospace; z-index: 99;
+.stream-objects .matrix-info {
+    margin-top: 1rem;
+    background: rgba(0,0,0,0.3);
+    color: #fff;
+    width: 100%;
+    padding: 1rem;
+    font-family: monospace;
+    z-index: 99;
     position: relative;
 }
 .stream-objects .matrix-info.yellow{
